Updated test branch

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -167,18 +167,16 @@ jobs:
           TEST_USER_ADMIN: ${{ secrets.TEST_USER_ADMIN }}
           TEST_USER_ADMIN_PASSWORD: ${{ secrets.TEST_USER_ADMIN_PASSWORD }}
 
-  notify-slack:
-    needs: run-e2e-tests
-    runs-on: ubuntu-latest
-    if: always()
-    steps:
       - name: Notify Slack Workflow
+        if: always()
         env:
           SLACK_WORKFLOW_WEBHOOK: ${{ secrets.SLACK_WORKFLOW_WEBHOOK }}
         run: |
-          STATUS=$(if [[ "${{ needs.run-e2e-tests.result }}" == "success" ]]; then echo "Pass"; else echo "Fail"; fi)
-          COLOR=$(if [[ "${{ needs.run-e2e-tests.result }}" == "success" ]]; then echo "good"; else echo "danger"; fi)
+          # Set STATUS and COLOR based on job status
+          STATUS=$(if [[ "${{ job.status }}" == "success" ]]; then echo "Pass"; else echo "Fail"; fi)
+          COLOR=$(if [[ "${{ job.status }}" == "success" ]]; then echo "good"; else echo "danger"; fi)
           
+          # Send the Slack notification
           curl -X POST -H "Content-type: application/json" \
           --data '{
             "text": "Playwright Test Results ('"${STATUS}"')",
