--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -2,11 +2,11 @@ name: E2E Tests
 
 on:
   deployment_status:
-    types: [success]
     environments:
       - 'Preview - gp-ui'
       - 'Production - gp-ui'
-  schedule:
+    schedule:
+    # Run at midnight PST (8 AM UTC)
     - cron: '0 8 * * *'
 
 concurrency:
