--- a/package.json
+++ b/package.json
@@ -112,5 +112,8 @@
     "postcss": "^8.4.23",
     "prettier": "^2.7.1",
     "storybook": "7.6.16"
+  },
+  "engines": {
+    "node": "22.x"
   }
 }
