--- a/package.json
+++ b/package.json
@@ -53,17 +53,17 @@
     "libphonenumber-js": "^1.10.14",
     "marked": "^14.1.2",
     "match-sorter": "^6.3.1",
-    "next": "14.2.3",
+    "next": "^15.3.2",
     "next-pwa": "^5.6.0",
     "path-to-regexp": "^8.2.0",
     "query-string": "^9.1.0",
-    "react": "18.2.0",
+    "react": "^19.1.0",
     "react-canvas-confetti": "^1.4.0",
     "react-chartjs-2": "^5.3.0",
     "react-color": "^2.19.3",
     "react-copy-to-clipboard": "^5.1.0",
     "react-csv": "^2.2.2",
-    "react-dom": "18.2.0",
+    "react-dom": "^19.1.0",
     "react-drag-reorder": "^1.2.0",
     "react-icons": "^5.5.0",
     "react-image-crop": "^10.1.5",
@@ -92,12 +92,12 @@
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "7.6.16",
-    "@storybook/addon-links": "7.6.16",
-    "@storybook/addon-styling": "^1.0.8",
-    "@storybook/blocks": "7.6.16",
-    "@storybook/nextjs": "7.6.16",
-    "@storybook/react": "7.6.16",
+    "@storybook/addon-essentials": "8.6.12",
+    "@storybook/addon-links": "8.6.12",
+    "@storybook/addon-styling": "1.3.7",
+    "@storybook/blocks": "8.6.12",
+    "@storybook/nextjs": "8.6.12",
+    "@storybook/react": "8.6.12",
     "@storybook/testing-library": "^0.0.14-next.2",
     "@stylistic/eslint-plugin": "^3.1.0",
     "autoprefixer": "^10.4.14",
@@ -111,7 +111,7 @@
     "madge": "^8.0.0",
     "postcss": "^8.4.23",
     "prettier": "^2.7.1",
-    "storybook": "7.6.16"
+    "storybook": "8.6.12"
   },
   "engines": {
     "node": "22.x"
