--- a/package.json
+++ b/package.json
@@ -35,12 +35,11 @@
     "@react-google-maps/api": "^2.20.6",
     "@react-oauth/google": "^0.11.0",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/postcss": "^4.1.6",
     "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-table": "^8.21.3",
-    "autosuggest-highlight": "^3.3.4",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
-    "cookies-next": "^4.2.1",
     "date-fns": "^4.1.0",
     "es-toolkit": "^1.32.0",
     "fuse.js": "^7.1.0",
@@ -80,11 +79,9 @@
     "rss": "^1.2.2",
     "sanitize-html": "^2.14.0",
     "sass": "^1.56.0",
-    "sharp": "^0.31.3",
     "slick-carousel": "^1.8.1",
     "slugify": "^1.6.6",
     "tailwindcss": "^3.2.1",
-    "tinymce": "^6.6.2",
     "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
