[WEB-4270] - Kills Lottie "document is not defined" errors

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@emotion/styled": "^11.10.5",
     "@googlemaps/js-api-loader": "^1.16.8",
     "@googlemaps/markerclusterer": "^2.5.3",
+    "@lottiefiles/react-lottie-player": "^3.6.0",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@react-google-maps/api": "^2.20.6",
@@ -68,7 +69,6 @@
     "react-inlinesvg": "^4.2.0",
     "react-lite-youtube-embed": "^2.3.52",
     "react-loading": "^2.0.3",
-    "react-lottie-player": "^2.1.0",
     "react-quilljs": "^2.0.5",
     "react-responsive-masonry": "^2.1.6",
     "react-schemaorg": "^2.0.0",
