--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -115,7 +115,7 @@ jobs:
           repository: thegoodparty/test-automation
           token: ${{ secrets.GH_PAT_TEST }}
           path: test-automation
-          ref: develop
+          ref: my_profile_tests_fixes
 
       - name: Install Playwright Dependencies in test-automation Repo
         run: |
