Adding Amplitude Experiment SDK to all page layouts, a component, helper, and docs

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "detect-circular-dependencies": "npx madge --circular --warning app"
   },
   "dependencies": {
+    "@amplitude/experiment-js-client": "^1.16.1",
     "@contentful/rich-text-plain-text-renderer": "^16.0.1",
     "@contentful/rich-text-react-renderer": "^16.0.1",
     "@contentful/rich-text-types": "^16.0.1",
