--- a/package.json
+++ b/package.json
@@ -90,7 +90,8 @@
     "slick-carousel": "^1.8.1",
     "slugify": "^1.6.6",
     "tailwindcss": "^3.2.1",
-    "typewriter-effect": "^2.22.0"
+    "typewriter-effect": "^2.22.0",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "8.6.12",
