--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@mui/material": "^7.1.0",
     "@react-google-maps/api": "^2.20.6",
     "@react-oauth/google": "^0.11.0",
+    "@segment/analytics-next": "^1.81.1",
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.4.0",
     "@tailwindcss/line-clamp": "^0.4.4",
