--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@amplitude/experiment-js-client": "^1.16.1",
+    "@amplitude/session-replay-browser": "^1.27.0",
     "@contentful/rich-text-plain-text-renderer": "^16.0.1",
     "@contentful/rich-text-react-renderer": "^16.0.1",
     "@contentful/rich-text-types": "^16.0.1",
@@ -40,6 +41,7 @@
     "@mui/material": "^7.1.0",
     "@react-google-maps/api": "^2.20.6",
     "@react-oauth/google": "^0.11.0",
+    "@segment/analytics-next": "^1.81.1",
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.4.0",
     "@tailwindcss/line-clamp": "^0.4.4",
@@ -56,6 +58,7 @@
     "intro.js-react": "^1.0.0",
     "isbot": "^5.1.1",
     "isomorphic-dompurify": "^2.14.0",
+    "js-cookie": "^3.0.5",
     "libphonenumber-js": "^1.10.14",
     "marked": "^14.1.2",
     "match-sorter": "^6.3.1",
