--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "sass": "^1.56.0",
     "slick-carousel": "^1.8.1",
     "slugify": "^1.6.6",
+    "string-strip-html": "^13.4.13",
     "tailwindcss": "^3.2.1",
     "typewriter-effect": "^2.22.0",
     "validator": "^13.15.15"
