--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -113,7 +113,7 @@ jobs:
           repository: thegoodparty/test-automation
           token: ${{ secrets.GH_PAT_TEST }}
           path: test-automation
-          ref: domain_purchase_tests
+          ref: setup_office_retry
 
       - name: Install Playwright Dependencies in test-automation Repo
         run: |
