--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "slugify": "^1.6.6",
     "string-strip-html": "^13.4.13",
     "tailwindcss": "^3.2.1",
+    "typescript": "^5.9.3",
     "typewriter-effect": "^2.22.0",
     "validator": "^13.15.15"
   },
