--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "date-fns": "^4.1.0",
     "es-toolkit": "^1.32.0",
     "fuse.js": "^7.1.0",
-    "goodparty-styleguide": "1.3.20",
+    "goodparty-styleguide": "1.3.26",
     "hamburger-react": "^2.5.2",
     "intro.js": "^8.3.2",
     "intro.js-react": "^1.0.0",
@@ -111,6 +111,7 @@
     "@storybook/react": "8.6.12",
     "@storybook/testing-library": "^0.0.14-next.2",
     "@stylistic/eslint-plugin": "^3.1.0",
+    "@types/react": "19.2.2",
     "autoprefixer": "^10.4.14",
     "cross-env": "^7.0.3",
     "csv-writer": "^1.6.0",
