--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   e2e-tests:
     name: Run E2E Tests on Staging
-    runs-on: blacksmith-4vcpu-ubuntu-2204
+    runs-on: ubuntu-22.04
     if: github.event.deployment_status.state == 'success'
     # Explicit permissions for accessing workflow artifacts
     permissions:
