--- a/package.json
+++ b/package.json
@@ -111,7 +111,13 @@
     "@storybook/react": "8.6.12",
     "@storybook/testing-library": "^0.0.14-next.2",
     "@stylistic/eslint-plugin": "^3.1.0",
+    "@types/js-cookie": "^3.0.6",
+    "@types/node": "^24.10.0",
     "@types/react": "19.2.2",
+    "@types/react-color": "^3.0.13",
+    "@types/react-slick": "^0.23.13",
+    "@types/sanitize-html": "^2.16.0",
+    "@types/validator": "^13.15.4",
     "autoprefixer": "^10.4.14",
     "cross-env": "^7.0.3",
     "csv-writer": "^1.6.0",
