https://github.com/thegoodparty/gp-webapp/pull/1137#discussion_r2525189794

--- a/package.json
+++ b/package.json
@@ -5,21 +5,22 @@
   "author": "Tomer Almog",
   "license": "MIT",
   "scripts": {
+    "build": "next build",
+    "build-local": "cross-env NODE_ENV=production CI=1 NEXT_PUBLIC_APP_BASE=http://localhost:4000 NEXT_PUBLIC_API_BASE=http://localhost:3000 next build",
+    "build-storybook": "storybook build",
     "dev": "cross-env NODE_OPTIONS=\"--max_old_space_size=8192\" NEXT_PUBLIC_APP_BASE=http://localhost:4000 NEXT_PUBLIC_API_BASE=http://localhost:3000 next dev -p 4000 --turbo",
     "dev-dev": "cross-env NEXT_PUBLIC_APP_BASE=http://localhost:4000 NEXT_PUBLIC_API_BASE=https://gp-api-dev.goodparty.org  next dev -p 4000 --turbo",
     "deploy-dev": "git checkout develop && eb deploy",
     "deploy-qa": "git checkout qa && eb deploy",
     "deploy-prod": "git checkout master  && eb deploy",
-    "build-local": "cross-env NODE_ENV=production CI=1 NEXT_PUBLIC_APP_BASE=http://localhost:4000 NEXT_PUBLIC_API_BASE=http://localhost:3000 next build",
-    "build": "next build",
-    "start": "next build && next start",
-    "start-local": "cross-env NODE_ENV=production NEXT_PUBLIC_APP_BASE=http://localhost:4000 NEXT_PUBLIC_API_BASE=http://localhost:3000 next start -p 4000",
+    "detect-circular-dependencies": "npx madge --circular --warning app",
+    "format": "prettier -c .",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "format": "prettier -c .",
+    "start": "next build && next start",
+    "start-local": "cross-env NODE_ENV=production NEXT_PUBLIC_APP_BASE=http://localhost:4000 NEXT_PUBLIC_API_BASE=http://localhost:3000 next start -p 4000",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "detect-circular-dependencies": "npx madge --circular --warning app"
+    "types": "npx tsc"
   },
   "dependencies": {
     "@amplitude/experiment-js-client": "^1.16.2",
