[ENG-4387] - Started conversions on shared folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,7 +47,8 @@
     "**/*.ts",
     "**/*.tsx",
     "next-env.d.ts",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "types/**/*.d.ts"
   ],
   "exclude": [
     "node_modules",
