--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -8,14 +8,19 @@ jobs:
     name: E2E Tests
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    if: |
-      github.event.deployment_status.state == 'success' &&
-      github.event.deployment_status.environment == 'Preview - gp-ui'
+    if: github.event.deployment_status.state == 'success'
     permissions:
       actions: read
       contents: read
       pull-requests: write
     steps:
+      - name: Debug deployment info
+        run: |
+          echo "Deployment environment: ${{ github.event.deployment_status.environment }}"
+          echo "Deployment state: ${{ github.event.deployment_status.state }}"
+          echo "Deployment URL: ${{ github.event.deployment_status.target_url }}"
+          echo "Event name: ${{ github.event_name }}"
+
       - name: Set deployment URL
         id: deployment
         run: |
